Closed Bug 1296624 Opened 8 years ago Closed 8 years ago

widget/gonk/nsScreenManagerGonk.cpp:667:64: error: ignoring return value of function declared with attribute warn_unused_result [-Werror=unused-result]

Categories

(Firefox OS Graveyard :: GonkIntegration, defect)

ARM
Gonk (Firefox OS)
defect
Not set
normal

Tracking

(firefox51 fixed)

RESOLVED FIXED
Tracking Status
firefox51 --- fixed

People

(Reporter: gerard-majax, Unassigned)

References

Details

Attachments

(1 file)

Depends on: 1293596
Comment on attachment 8782919 [details] Bug 1296624 - Fix nsScreenManagerGonk call to nsWindow::Create() https://reviewboard.mozilla.org/r/72932/#review70692
Attachment #8782919 - Flags: review?(fabrice) → review+
Pushed by alissy@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/016a35f44c9a Fix nsScreenManagerGonk call to nsWindow::Create() r=fabrice
Status: NEW → RESOLVED
Closed: 8 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: