Bug 1296624 - Fix nsScreenManagerGonk call to nsWindow::Create() r=fabrice

MozReview-Commit-ID: 6cbgPfhdzKg